# parental-watchdog

./: Cargo.toml  README.md  parental-watchdog.service  shell.nix
examples/: config.yaml
old/: app-watchdog.service  xapp-watchdog.sh
src/: backend.rs  config.rs  main.rs  misc.rs
