[package]
name = "parental-watchdog"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
dirs = "6.0.0"
humantime = "2.3.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
users = "0.11.0"
